fully refactored hardcoded UI into fxmls chat now updates in real time fully working