@@ -3,33 +3,33 @@ import javafx.fxml.FXML;
 import javafx.scene.control.ComboBox;
 import javafx.scene.control.Label;
 
-public class CancelReservationController implements DashboardContentController {
+import java.util.stream.Collectors;
+
+public class CheckInController implements DashboardContentController {
 
     @FXML private ComboBox<Reservation> reservationCombo;
+    @FXML private Label messageLabel;
 
     private Main mainApp;
-    private Guest guest;
 
     @Override
     public void initData(Main mainApp, Object data) {
         this.mainApp = mainApp;
-        if (data instanceof Guest g) {
-            this.guest = g;
-            loadReservations();
-        }
+        loadReservations();
     }
 
     private void loadReservations() {
+        Database.refreshReservationsFromDatabase();
         reservationCombo.setItems(FXCollections.observableArrayList(
                 Database.getReservations().stream()
-                        .filter(r -> r.getGuest().getUsername().equalsIgnoreCase(guest.getUsername()))
-                        .filter(r -> r.getStatus() != ReservationStatus.CANCELLED)
-                        .toList()
+                        .filter(r -> r.getStatus() == ReservationStatus.CONFIRMED)
+                        .filter(r -> r.getCheckInDate().isEqual(SystemTime.getToday()))
+                        .collect(Collectors.toList())
         ));
     }
 
     @FXML
-    private void handleCancel() {
+    private void handleCheckIn() {
         try {
             Reservation selected = reservationCombo.getValue();
             if (selected == null) {
@@ -37,9 +37,9 @@ public class CancelReservationController implements DashboardContentController {
                 return;
             }
 
-            ReservationService.cancelReservation(selected.getReservationId());
-            mainApp.alert("Cancelled", "Reservation cancelled successfully.");
-            loadReservations();
+            ReservationService.checkInGuest(selected, selected.getGuest());
+            mainApp.alert("Success", "Guest checked in.");
+            loadReservations(); // Refresh the list
             reservationCombo.setValue(null);
 
         } catch (Exception ex) {
